Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1200

2.2.50 client doesn't build for SLES11 SP0 (2.6.27.19-5.1)

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.3.0
    • Lustre 2.2.0
    • None
    • SLES11 SP0 (2.6.27.19-5.1)
    • 3
    • 4652

    Description

      In SLES11 SP0 (2.6.27.19-5.1), .page_mkwrite uses struct page * instead of struct vm_fault * as its second parameter. Lustre need to detect it so that it can build patchless client for SLES11 SP0.

      Attachments

        Activity

          People

            wc-triage WC Triage
            bergwolf Peng Tao
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: